--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ configparser==5.2.0
 crayons==0.4.0
 cryptography==36.0.1
 cssselect==1.1.0
+dj-database-url==0.5.0
 Django==4.0.3
+django-heroku==0.3.1
 fake-useragent==0.1.11
 gunicorn==20.1.0
 h11==0.13.0
@@ -24,6 +26,8 @@ importlib-metadata==4.11.2
 lxml==4.8.0
 outcome==1.1.0
 parse==1.19.0
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pycparser==2.21
 pyee==8.2.2
 pyOpenSSL==22.0.0
